# Moset.org

./: .gitignore  Biblia_Moset.md  Biblia_Moset_en.md  Biblia_Moset_org.md  LICENSE  README.md  README_ecosystem.md  Resumen.txt  animista.css  especificacion_moset.txt  fix_encoding.py  moset_firma.txt  test_moset.txt
.github/workflows/: moset-ci.yml  moset-release.yml  release.yml
.moset/commands/: test_macro.md
.tauri-keys/: moset.key  moset.key.pub
PlayGround/: package-lock.json  package.json
PlayGround/src/: App.tsx  index.css
ai-corpus/prompts/: base_agent.md
core-engine/: Cargo.toml  scratch_cmd.rs  scratch_test.et  scratch_test2.et  scratch_test3.et  test_rand.rs
core-engine/scripts/: primera_chispa.et  test_input.bat  test_linter.et
core-engine/src/: agent.rs  ai.rs  ast.rs  bytecode.rs  cloud_ai.rs  compiler.rs  lexer.rs  lib.rs  linter.rs  lsp.rs  mcp.rs  stdlib.rs  vigilante.rs
core-engine/src/vm/: engine.rs  mod.rs
docs/: APRENDE_ETHER.md  Resumen.txt
docs/examples/: .et-dict  brazos_demo.et  funciones.et  hola_mundo.et  llamadas_externas.et  moldes.et  moldes_elasticos.et  quantum_bias.et  quantum_flip.et  test_catch.et  test_metodos.et  test_pensar.et  test_qubit.et  variables_tipos.et
mos.et/examples/: funciones.et  pensar.et  test_qubit.et  variables_tipos.et
moset-ecosystem/: .gitignore  README.md  implementation_plan.md
moset-ecosystem/ai-corpus/: moset_dialect_seed.jsonl
moset-ecosystem/core-engine/: Cargo.toml  err.txt  error.txt  errors.txt
moset-ecosystem/core-engine/examples/: brazos_demo.et  moldes_elasticos.et  quantum_bias.et
moset-ecosystem/core-engine/scripts/: primera_chispa.et  setup_cuda.ps1  test_cuda.et  test_cuda.ps1
moset-ecosystem/core-engine/src/: agent.rs  ai.rs  ast.rs  bytecode.rs  cloud_ai.rs  compiler.rs  lexer.rs  lib.rs  linter.rs  lsp.rs  main.rs  parser.rs  stdlib.rs  valor.rs  vigilante.rs  wasm.rs
moset-ecosystem/core-engine/src/vm/: chunk.rs  engine.rs  opcode.rs  value.rs  vm.rs
moset-ecosystem/core-engine/tests/: vm_tests.rs
moset-ecosystem/examples/: aritmetica.et  bits_cuanticos.et  bucles.et  hola_mundo.et  moldes.et  mythos_ia.et  sistema.et
moset-ecosystem/moset_wasm_demo/: index.html
moset-ecosystem/naraka-ide/: Generador de Instaladores Moset.bat  ide_launcher.ps1  index.html  instalar_build_shortcut.ps1  package-lock.json  (+7 more)
moset-ecosystem/naraka-ide/src-tauri/: Cargo.toml  check_error.txt  tauri.conf.json
moset-ecosystem/naraka-ide/src-tauri/.cargo/: config.toml
moset-ecosystem/naraka-ide/src-tauri/capabilities/: default.json  default.toml
moset-ecosystem/naraka-ide/src-tauri/icons/: icon.icns
moset-ecosystem/naraka-ide/src-tauri/permissions/: default.toml
moset-ecosystem/naraka-ide/src-tauri/src/: lib.rs  tauri_bridge.rs
moset-ide/: Generador de Instaladores Moset.bat  Moset_Silent.vbs  download_tokenizers.py  instalar_build_shortcut.ps1  instalar_dev_shortcut.ps1  instalar_icono_escritorio.ps1  instalar_lanzador_principal.ps1  package-lock.json  package.json  run_build.bat  run_dev.bat  run_moset_ide.vbs  splash.ps1
naraka-ide/: download_tokenizers.py  instalar_icono_escritorio.ps1  run_dev.bat  run_moset_ide.vbs
releases/: update.json
scripts/: fix_encoding.py  generate_corpus.py  moset_corpus.txt
(+118 files in other folders)
