[package]
name = "moset"
version = "0.1.0"
edition = "2021"
description = "Moset Programming Language — The Sovereign Engine"
license = "BUSL-1.1"
authors = ["Naraka Studio"]

[lib]
name = "moset_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "moset"
path = "src/main.rs"

[features]
default = []
cloud = ["reqwest"]
ai = ["candle-core", "candle-nn", "candle-transformers", "tokenizers", "cloud"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = "0.3"

# ── Motor Mythos (IA Local) ──
candle-core = { version = "0.10.2", optional = true }
candle-nn = { version = "0.10.2", optional = true }
candle-transformers = { version = "0.10.2", optional = true }
tokenizers = { version = "0.21", optional = true }
reqwest = { version = "0.13.2", features = ["blocking", "json"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
