[package]
name = "moset"
version = "0.1.0"
edition = "2021"
description = "Moset Programming Language — The Sovereign Engine"
license = "BUSL-1.1"
authors = ["Naraka Studio"]

[lib]
name = "moset_core"
path = "src/lib.rs"

[[bin]]
name = "moset"
path = "src/main.rs"

[features]
default = []
ai = ["candle-core", "candle-nn", "candle-transformers", "tokenizers"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"

# ── Motor Mythos (IA Local) ──
candle-core = { version = "0.10.2", optional = true }
candle-nn = { version = "0.10.2", optional = true }
candle-transformers = { version = "0.10.2", optional = true }
tokenizers = { version = "0.21", optional = true }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
