[package]
name = "moset-ide"
version = "0.1.0"
description = "Moset Studio IDE"
authors = ["Moset Studio"]
edition = "2021"

[lib]
name = "moset_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2"

# ── Motor Soberano ──
moset_core = { path = "../../core-engine", package = "moset" }
portable-pty = "0.9.0"

[features]
default = ["ai"]
ai = ["moset_core/ai"]
cuda = ["moset_core/cuda"]
